[project]
name = "email-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-secret-manager>=2.24.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.1",
]
